--- a/view/admin/category/create.html
+++ b/view/admin/category/create.html
@@ -92,6 +92,15 @@
                     </div>
                   </div>
                   <div class="layui-form-item">
+                    <div class="layui-form-label">
+                      排序
+                      <p class="layui-word-aux">越小越靠前</p>
+                    </div>
+                    <div class="layui-input-block">
+                      <input type="text" name="sort" value="0" required lay-verify="required" class="layui-input">
+                    </div>
+                  </div>
+                  <div class="layui-form-item">
                     <button class="layui-btn layui-btn-fluid" submit lay-submit lay-filter="site-info">提交</button>
                   </div>
                 </form>
