修改文件类型

--- a/view/admin/file/index.html
+++ b/view/admin/file/index.html
@@ -89,7 +89,7 @@
                                         <p>保存名称:{$vo->getData('save_name')}</p>
                                         <p>文件名:{$vo->getData('file_name')}</p>
                                         <p>文件类型: {$vo.mime_type}</p>
-                                        <p>文件用途: <span style="color: red">{$vo.type}</span> </p>
+                                        <p>文件用途: <span style="color: red">{$vo.type_title}</span> </p>
                                         <p>文件大小: {$vo.file_size}</p>
                                         <p>文件指纹: {$vo.file_md5}</p>
                                     </td>
