--- a/view/admin/nav/create.html
+++ b/view/admin/nav/create.html
@@ -109,7 +109,7 @@
                     </div>
                     {/if}
                     <div class="layui-form-item">
-                      <div class="layui-form-label">排序</div>
+                      <div class="layui-form-label">排序<span class="layui-word-aux">排序越小越靠前</span></div>
                       <div class="layui-input-block">
                         <input type="number" name="sort" value="" class="layui-input">
                       </div>
