--- a/view/admin/nav/index.html
+++ b/view/admin/nav/index.html
@@ -82,6 +82,9 @@
                 {/if}
               </tbody>
             </table>
+            <div>
+              {$list|raw}
+            </div>
           </div>
         </div>
       </div>
