--- a/view/admin/nav/create.html
+++ b/view/admin/nav/create.html
@@ -45,7 +45,7 @@
                     <div class="layui-form-item">
                       <div class="layui-form-label">标题</div>
                       <div class="layui-input-block">
-                        <input type="text" name="title" required lay-verify="required" value="" class="layui-input">
+                        <input type="text" name="title" value="" class="layui-input">
                       </div>
                     </div>
                     <div class="layui-form-item">
@@ -109,7 +109,13 @@
                     </div>
                     {/if}
                     <div class="layui-form-item">
-                      <div class="layui-form-label">排序<span class="layui-word-aux">排序越小越靠前</span></div>
+                      <div class="layui-form-label">key</div>
+                      <div class="layui-input-block">
+                        <input type="text" name="key" value="" class="layui-input">
+                      </div>
+                    </div>
+                    <div class="layui-form-item">
+                      <div class="layui-form-label">排序</div>
                       <div class="layui-input-block">
                         <input type="number" name="sort" value="" class="layui-input">
                       </div>
