--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -7,7 +7,7 @@
         {if check_permission('file_list') }
         <li class="layui-nav-item header-nav-item" data-name="File" ><a href="{:url('admin/File/index')}">文件管理</a></li>
         {/if}
-        <li class="layui-nav-item header-nav-item" data-name="Post-1" ><a href="{:url('admin/Post/index')}">内容管理</a></li>
+        <li class="layui-nav-item header-nav-item" data-name="Post-default" ><a href="{:url('admin/Post/index',['type'=>'default'])}">内容管理</a></li>
         
         <li class="layui-nav-item header-nav-item" data-name="Admin" ><a href="{:url('admin/Admin/index')}">管理员管理</a></li>
         <li class="layui-nav-item header-nav-item" data-name="System" ><a href="{:url('admin/System/index')}">系统设置</a></li>
