新增创建模板命令

--- a/view/admin/common/tpl.html
+++ b/view/admin/common/tpl.html
@@ -8,8 +8,8 @@
     {include file="common/_require"}
 
     <script>
-        var currentHeaderNavItem = 'Index';
-        var currentLeftNavItem = 'index';
+        var currentHeaderNavItem = '{%controllerName%}';
+        var currentLeftNavItem = '{%actionName%}';
     </script>
 </head>
 <body class="layui-layout-body">
