--- a/public/static/css/common.css
+++ b/public/static/css/common.css
@@ -80,6 +80,12 @@
 }
 
 
+.upload-img{
+  max-width: 200px;
+  max-height: 200px;
+}
+
+
 @media screen and (max-width: 768px){
   .layui-body{
       left: 0;
