--- a/view/admin/common/_require.html
+++ b/view/admin/common/_require.html
@@ -1,11 +1,15 @@
 <link rel="shortcut icon" href="{:get_source_link(get_system_config('site_favicon','/favicon.ico'))}" type="image/x-icon">
+
 <link rel="stylesheet" href="/static/css/reset.css">
 <link rel="stylesheet" href="/static/css/pagination.css">
 <link rel="stylesheet" href="/static/lib/layui/css/layui.css">
-<link rel="stylesheet" href="/static/css/{$Request.cookie.skin_name|default='skin-1'}.css">
+
+<link rel="stylesheet" href="//layui.ulthon.com/cdn/layui-ul-change.css">
+<link rel="stylesheet" href="//layui.ulthon.com/cdn/layui-ul.css">
+
 <link rel="stylesheet" href="/static/css/common.css">
+
 <script src="/static/lib/jquery/jquery-3.4.1.min.js"></script>
-<script src="/static/lib/jquery/jquery.cookie.js"></script>
 <script src="/static/lib/layui/layui.js"></script>
 <script src="/static/js/common.js"></script>
 
@@ -15,39 +19,17 @@
   layui.use(['element', 'layer', 'util'], function () {
     var element = layui.element;
     var util = layui.util;
-    var defaultCookieSetting = {
-      path: '/',
-      expires: 7,
-    }
+
     //执行
     util.fixbar({
-      bar1: '&#xe656;'
-      , click: function (type) {
-        console.log(type);
-        if (type === 'bar1') {
-          var skinName = $.cookie('skin_name')
-          $('body').removeClass()
-          if (skinName == 'skin-1') {
-            $.cookie('skin_name', 'skin-0', defaultCookieSetting)
-            $('body').addClass('skin-0')
-          } else {
-            $.cookie('skin_name', 'skin-1', defaultCookieSetting)
-            $('body').addClass('skin-1')
-
-          }
-
-          location.reload()
-        }
-      }
+      
     });
     $('.layui-side').addClass('layui-hide-xs')
 
   });
 
   $(function () {
-    var skinName = $.cookie('skin-name')
 
-    $('body').addClass(skinName)
     setTimeout(() => {
       if (typeof currentHeaderNavItem != "undefined") {
         $('.header-nav-item').each(function (i, e) {
