网站描述改为textarea

--- a/view/admin/system/index.html
+++ b/view/admin/system/index.html
@@ -45,7 +45,7 @@
                   <div class="layui-form-item">
                     <div class="layui-form-label">网站描述</div>
                     <div class="layui-input-block">
-                      <input type="text" name="site_desc" value="{:get_system_config('site_desc')}" class="layui-input">
+                      <textarea name="site_desc" class="layui-textarea">{:get_system_config('site_desc')}</textarea>
                     </div>
                   </div>
 
