新增配置自动添加;

--- a/app/admin/view/system/config/site.html
+++ b/app/admin/view/system/config/site.html
@@ -1,5 +1,5 @@
 <form id="app-form" class="layui-form layuimini-form">
-
+    <input type="hidden" name="group_name" value="site">
     <div class="layui-form-item">
         <label class="layui-form-label">站点名称</label>
         <div class="layui-input-block">
