--- a/app/admin/view/layout/default.html
+++ b/app/admin/view/layout/default.html
@@ -23,6 +23,7 @@
             CSRF_TOKEN: "{:token()}",
         };
     </script>
+    <script src="__STATIC__/common/js/app.js"></script>
     <script src="__STATIC__/plugs/layui-v2.5.6/layui.all.js?v={$version}" charset="utf-8"></script>
     <script src="__STATIC__/plugs/require-2.3.6/require.js?v={$version}" charset="utf-8"></script>
     <script src="__STATIC__/config-admin.js?v={$version}" charset="utf-8"></script>
