--- a/view/index/welcome.html
+++ b/view/index/welcome.html
@@ -40,7 +40,7 @@
                 <p><i class="name img-name"></i></p>
                 <p class="desc">{$data.description|default=''}</p>
                 <p class="operation">
-                    <a class="start" target="_blank" href="http://ulthon_admin.99php.cn/docs"> 起步 <i class="icon-play"></i></a>
+                    <a class="start" target="_blank" href="http://doc.ulthon.com/home/read/ulthon_admin/home.html"> 起步 <i class="icon-play"></i></a>
                     <a class="github button-grya" target="_blank" href="https://github.com/zhongshaofa/ulthon_admin"><i class="icon-github-big"></i>GitHub</a>
                     <a class="gitee button-grya" target="_blank" href="https://gitee.com/zhongshaofa/ulthon_admin"><i class="icon-gitee"></i>Gitee</a>
                 </p>
@@ -99,7 +99,7 @@
         <div class="container">
             <p class="protocol">遵循 木兰 开源协议 </p>
             <p class="beian-number">Copyright © （填你自己的）版权所有，并保留所有权利 | <a target="_blank" href="http://www.miitbeian.gov.cn">（填你自己的）</a></p>
-            <p>Site designed by <a href="https://github.com/zhongshaofa" target="_blank">zhongshaofa</a></p>
+            <p>Site designed by <a href="https://gitee.com/ulthon" target="_blank">ulthon</a></p>
         </div>
     </footer>
     </div>
