完成底层多皮肤风格代码；

--- a/app/admin/view/layout/default.html
+++ b/app/admin/view/layout/default.html
@@ -13,7 +13,7 @@
     <![endif]-->
     <link rel="stylesheet" href="__STATIC__/admin/css/public.css?v={$version}" media="all">
 
-    <link rel="stylesheet" href="__STATIC__/common/css/theme/{:env('COVER_THEME','index')}.css?v={$version}">
+    <link rel="stylesheet" href="__STATIC__/common/css/theme/index.css?v={$version}">
 
     <script>
         window.CONFIG = {
