--- a/public/static/common/css/theme/_demo.scss
+++ b/public/static/common/css/theme/_demo.scss
@@ -41,21 +41,21 @@
     color: #fff !important;
 }
 
-body .layuimini-tab>.layui-tab-title li,
-body .layuimini-tab>.close-box li {
+.layuimini-tab>.layui-tab-title li,
+.layuimini-tab>.close-box li {
     line-height: 27px !important;
 }
 
-body .layuimini-tab>.layui-tab-title,
-body .layuimini-tab>.close-box {
+.layuimini-tab>.layui-tab-title,
+.layuimini-tab>.close-box {
     height: 28px !important;
 }
 
-body .layuimini-tab .layui-tab-control>li {
+.layuimini-tab .layui-tab-control>li {
     height     : 28px !important;
     line-height: 28px !important;
 }
 
-body .layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
+.layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
     background-color: #6C6E71 !important;
 }
